--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 {"@context":"https://schema.org","@type":"WebSite","description":"tmarwah [at] andrew [dot] cmu [dot] edu","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/Tanya2.png?raw=true"}},"url":"/"}</script>
 <!-- End Jekyll SEO tag -->
 
-   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=2e752094de2bbc2804e227426abb07646e1a5775"> -->
-   <link rel="stylesheet" href="/css/style.css?v=2e752094de2bbc2804e227426abb07646e1a5775">
+   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=19bb122641dba47f9acdbb5d53c366b173718e0b"> -->
+   <link rel="stylesheet" href="/css/style.css?v=19bb122641dba47f9acdbb5d53c366b173718e0b">
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
@@ -78,7 +78,7 @@ Feel free to reach out to me if you are interested in any of these topics!!  -->
 
 <hr />
 
-<h2 id="publications">Publications</h2>
+<h2 id="selected-publications">Selected Publications</h2>
 
 <p><a href="https://drive.google.com/file/d/1W-E3K5QA2XyCRZm9iMuFeFs0SiP86xz7/view?usp=sharing">GMamba: Generalized State Space Models For Language, Images and Graphs</a> <br />
 Aakash Lahoti<sup>*</sup>, <strong>Tanya Marwah<sup>*</sup></strong>, Albert Gu <br />
@@ -116,10 +116,11 @@ Neural Information Processing Systems (NeurIPS), 2021 (Spotlight)</p>
 <strong>Tanya Marwah<sup>*</sup></strong>, Gaurav Mittal<sup>*</sup>, Vineeth N Balasubramanian <br />
 IEEE International Conference on Computer Vision (ICCV), 2017</p>
 
-<p><a href="https://arxiv.org/pdf/1611.10314.pdf">Sync-DRAW: Automatic video generation using deep recurrent attentive architectures</a> <br />
-<strong>Tanya Marwah<sup>*</sup></strong>, Gaurav Mittal<sup>*</sup>, Vineeth N Balasubramanian <br />
-25th ACM international conference on Multimedia (ACM-MM), 2017 (Oral)</p>
+<hr />
+<h3 id="working-paper">Working Paper</h3>
 
+<p><a href="https://drive.google.com/file/d/1y4hQ03PmEr2AW5VTsts7JJQoSPZywLaW/view?usp=sharing">Improving Zero-Shot Reasoning Using Dynamic Non-Verbal Tokens</a> <br />
+<strong>Tanya Marwah</strong>, Zhili Feng, Lester Mackey, Nicolo Fusi, David Alvarez-Melis \</p>
 
       </section>
       <footer>
